--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,15 @@
-node_modules
-dist
+__pycache__
+.venv/
+django-proberen/
+
+node_modules/
+dist/
+charting/
+map_prototype/
+
 data/
+
 *.nc
 passwords.*
-django-proberen/
+
+
