--- a/prototype/timeseries-backend/api/Dockerfile
+++ b/prototype/timeseries-backend/api/Dockerfile
@@ -10,4 +10,4 @@ COPY . .
 RUN pip install --no-cache-dir -r requirements.txt
 
 # Run the flask API on a gunicorn WSGI server, this is for production
-CMD ["gunicorn", "api:app", "-b", "0.0.0.0:8000"]
+CMD ["gunicorn", "api:app", "--workers", "2", "-b", "0.0.0.0:8000"]
