--- a/prototype/timeseries-website/package.json
+++ b/prototype/timeseries-website/package.json
@@ -4,16 +4,15 @@
   "description": "Makes queries to the database, and displays these on a basic website.",
   "main": "main.js",
   "scripts": {
-    "dev": "parcel index.html",
-    "build": "parcel build index.html"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   },
   "author": "moos",
   "license": "ISC",
-  "devDependencies": {
-    "parcel": "^2.6.2"
-  },
   "dependencies": {
     "chart.js": "^4.3.0",
+    "i18n-iso-countries": "7.6.0",
     "lodash.range": "^3.2.0"
   }
 }
