--- a/prototype/timeseries-backend/api/Dockerfile
+++ b/prototype/timeseries-backend/api/Dockerfile
@@ -1,7 +1,7 @@
 FROM python:3.8
 
 # set working directory, from where the app will be run
-WORKDIR /app
+WORKDIR /app/timeseries/backend
 
 # copy files from current directory to working directory
 COPY . .
