--- a/.gitignore
+++ b/.gitignore
@@ -4,12 +4,14 @@ __pycache__
 
 node_modules/
 dist/
-
-
+redundand_code/
+leren/
+documentation/
 data/
+
 
 *.nc
 passwords.*
 package-lock.json
-
 *.jar
+TODO.md
