--- a/prototype/timeseries-website/package.json
+++ b/prototype/timeseries-website/package.json
@@ -4,17 +4,20 @@
   "description": "Prototype of Map Website",
   "main": "src/index.js",
   "scripts": {
-    "dev": "vite", 
+    "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
   },
   "author": "Moos Castelijn",
   "license": "ISC",
   "dependencies": {
-    "ol": "7.4.0",
-    "vite": "4.4.6",
+    "bootstrap": "^5.3.1",
     "chart.js": "4.3.0",
     "i18n-iso-countries": "7.6.0",
-    "lodash.range": "3.2.0"
+    "jquery": "^3.7.1",
+    "lodash.range": "3.2.0",
+    "ol": "7.4.0",
+    "vite": "4.4.6",
+    "webpack": "^5.88.2"
   }
 }
