--- a/prototype/timeseries-website/package.json
+++ b/prototype/timeseries-website/package.json
@@ -13,9 +13,13 @@
   "dependencies": {
     "bootstrap": "^5.3.1",
     "chart.js": "4.3.0",
+    "chartjs-adapter-date-fns": "^3.0.0",
+    "chartjs-adapter-moment": "^1.0.1",
+    "date-fns": "^2.30.0",
     "i18n-iso-countries": "7.6.0",
     "jquery": "^3.7.1",
     "lodash.range": "3.2.0",
+    "moment": "^2.29.4",
     "ol": "7.4.0",
     "vite": "4.4.6",
     "webpack": "^5.88.2"
