--- a/prototype/ncWMS/fill-db/Dockerfile
+++ b/prototype/ncWMS/fill-db/Dockerfile
@@ -4,6 +4,7 @@ WORKDIR /temp
 
 COPY requirements.txt ./
 
+# Do this before copying utils_ncwms.py, since then don't execute each time a small change is made to python file.
 RUN pip install --no-cache-dir -r requirements.txt
 
 COPY utils_ncwms.py .
