--- a/prototype/ncWMS/docker-compose.yml
+++ b/prototype/ncWMS/docker-compose.yml
@@ -4,13 +4,13 @@ services:
   tomcat-ncwms:
     container_name: tomcat-ncwms
 
+    # External image for creating ncWMS docker containers
     image: guygriffiths/ncwms
 
     volumes:
-      # !!!!!! Important !!!!! password encrypted with SHA-1!!!!! NOT SHA-512. 
-      - /home/moos/Hyde-Platform/prototype/ncWMS/config.xml:/usr/local/tomcat/.ncWMS2/config.xml
-      - /home/moos/Hyde-Platform/prototype/ncWMS/tomcat-users.xml:/usr/local/tomcat/conf/tomcat-users.xml
-      - ./fill-db/netCDF:/data/netCDF
+      - /home/moos/Hyde-Platform/prototype/ncWMS/config.xml:/usr/local/tomcat/.ncWMS2/config.xml # config file for ncWMS
+      - /home/moos/Hyde-Platform/prototype/ncWMS/tomcat-users.xml:/usr/local/tomcat/conf/tomcat-users.xml # user file for tomcat
+      - ./fill-db/netCDF:/data/netCDF # netCDF data
 
     ports: 
       - 8080:8080
@@ -20,6 +20,7 @@ services:
     stdin_open: true 
     tty: true
 
+    # Healthcheck such that the fill-container can start after ncWMS is checked to have launched correctly
     healthcheck:
       test: curl --fail http://localhost:8080/ncWMS || exit 1
       interval: 20s
@@ -33,9 +34,12 @@ services:
 
     # Build image from the ./fill-db/Dockerfile
     build: ./fill-db
+
+    # Contains necessary password
     env_file:
       - /home/moos/Hyde-Platform/.env
 
+    # make again interactible
     stdin_open: true 
     tty: true
 
