learning react to create combined website

--- a/.env-template
+++ b/.env-template
@@ -1,5 +1,4 @@
 export POSTGRES_PASSWORD="[postgres password]"
-export CATALINA_HOME="/usr/bin/apache-tomcat-8.5.93"
-export JAVA_HOME="/usr/bin/java"
+export DEBUG="0"
+export POSTGRES_DB="timeseries"
 export ncWMS_PASSWORD="[ncWMS password]"	
-export ESRI_KEY="[retrieve ESRI key]"
