--- a/prototype/netCDF-Backend/docker-compose.yml
+++ b/prototype/netCDF-Backend/docker-compose.yml
@@ -8,8 +8,8 @@ services:
     image: guygriffiths/ncwms
 
     volumes:
-      - /home/moos/Hyde-Platform/prototype/ncWMS/config.xml:/usr/local/tomcat/.ncWMS2/config.xml # config file for ncWMS
-      - /home/moos/Hyde-Platform/prototype/ncWMS/tomcat-users.xml:/usr/local/tomcat/conf/tomcat-users.xml # user file for tomcat
+      - /home/moos/Hyde-Platform/prototype/netCDF-Backend/config.xml:/usr/local/tomcat/.ncWMS2/config.xml # config file for ncWMS
+      - /home/moos/Hyde-Platform/prototype/netCDF-Backend/tomcat-users.xml:/usr/local/tomcat/conf/tomcat-users.xml # user file for tomcat
       - ./fill-db/netCDF:/data/netCDF # netCDF data
 
     ports: 
@@ -19,6 +19,10 @@ services:
     # now interactable with: docker compose exec tomcat-ncwms bash
     stdin_open: true 
     tty: true
+
+    # Requered for running on server, for some reason
+    ulimits:
+      nofile: 65536
 
     # Healthcheck such that the fill-container can start after ncWMS is checked to have launched correctly
     healthcheck:
