--- a/prototype/website/package.json
+++ b/prototype/website/package.json
@@ -9,6 +9,7 @@
     "ol": "^7.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-grid-layout": "^1.4.2",
     "react-scripts": "^5.0.1"
   },
   "scripts": {
