--- a/prototype/website/package.json
+++ b/prototype/website/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "lodash.range": "^3.2.0",
     "ol": "^7.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
