Fixing Plot_fetch and plotting

--- a/prototype/website/package.json
+++ b/prototype/website/package.json
@@ -6,9 +6,12 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "chart.js": "^4.4.0",
+    "i18n-iso-countries": "^7.7.0",
     "lodash.range": "^3.2.0",
     "ol": "^7.3.0",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-grid-layout": "^1.4.2",
     "react-scripts": "^5.0.1"
