--- a/prototype/website/package.json
+++ b/prototype/website/package.json
@@ -13,6 +13,7 @@
     "ol": "^7.3.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.0",
+    "react-bootstrap-range-slider": "^3.0.8",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "^5.0.1",
