--- a/prototype/raster-Backend/docker-compose.yml
+++ b/prototype/raster-Backend/docker-compose.yml
@@ -8,8 +8,8 @@ services:
     image: guygriffiths/ncwms
 
     volumes:
-      - /home/moos/Hyde-Platform/prototype/netCDF-Backend/config.xml:/usr/local/tomcat/.ncWMS2/config.xml # config file for ncWMS
-      - /home/moos/Hyde-Platform/prototype/netCDF-Backend/tomcat-users.xml:/usr/local/tomcat/conf/tomcat-users.xml # user file for tomcat
+      - C:\Users\Moos-Hyde\Documents\Hyde-Platform\prototype\raster-Backend\config.xml:/usr/local/tomcat/.ncWMS2/config.xml # config file for ncWMS
+      - C:\Users\Moos-Hyde\Documents\Hyde-Platform\prototype\raster-Backend\tomcat-users.xml:/usr/local/tomcat/conf/tomcat-users.xml # user file for tomcat
       - ./fill-db/netCDF:/data/netCDF # netCDF data
 
     ports: 
@@ -41,7 +41,7 @@ services:
 
     # Contains necessary password
     env_file:
-      - /home/moos/Hyde-Platform/.env
+      - C:\Users\Moos-Hyde\Documents\Hyde-Platform\.env
 
     # make again interactible
     stdin_open: true 
