--- a/.env-template
+++ b/.env-template
@@ -1,4 +1,7 @@
-export POSTGRES_PASSWORD="[postgres password]"
-export DEBUG="0"
-export POSTGRES_DB="timeseries"
-export ncWMS_PASSWORD="[ncWMS password]"	
+# Raster Backend
+export ncWMS_PASSWORD="[password]"	
+
+# Timeseries Backend
+export POSTGRES_PASSWORD="[password]"
+
+# Website
