--- a/prototype/website/package.json
+++ b/prototype/website/package.json
@@ -16,6 +16,7 @@
     "react-bootstrap-range-slider": "^3.0.8",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.19.0",
     "react-scripts": "^5.0.1",
     "react-select": "^5.7.7",
     "source-map-loader": "^4.0.1"
