--- a/prototype/website/package.json
+++ b/prototype/website/package.json
@@ -19,6 +19,7 @@
     "react-router-dom": "^6.19.0",
     "react-scripts": "^5.0.1",
     "react-select": "^5.7.7",
+    "sass": "^1.69.5",
     "source-map-loader": "^4.0.1",
     "use-draggable-scroll": "^0.1.0"
   },
