--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -1,20 +1,24 @@
 version: "3.8"
-
 services:
-
   # Service for ncWMS running on Tomcat
   tomcat-ncwms:
     container_name: tomcat-ncwms
+
     image: guygriffiths/ncwms
+
     volumes:
-      - ./raster-backend/config.xml:/usr/local/tomcat/.ncWMS2/config.xml  # Configuration file for ncWMS
-      - ./raster-backend/tomcat-users.xml:/usr/local/tomcat/conf/tomcat-users.xml  # User file for Tomcat
-      - ./raster-backend/WMS/netCDF:/data/netCDF  # Directory for netCDF data
+      - ./WMS/config.xml:/usr/local/tomcat/.ncWMS2/config.xml  # Configuration file for ncWMS
+      - ./WMS/tomcat-users.xml:/usr/local/tomcat/conf/tomcat-users.xml  # User file for Tomcat
+      - ./WMS/netCDF:/data/netCDF  # Directory for netCDF data
+
     ports:
       - 8080:8080  # Expose port 8080 for external access
+
     ulimits:
       nofile: 65536  # Set file descriptor limit
+
     restart: always # Restart upon failure 
+
     healthcheck: # Healthcheck to ensure ncWMS is launched correctly
       test: curl --fail http://localhost:8080/ncWMS || exit 1  
       interval: 20s
@@ -25,7 +29,9 @@ services:
   # Service for filling data into ncWMS
   ncwms-fill:
     container_name: ncwms-fill
-    build: ./raster-backend/WMS  # Build from the specified Dockerfile
+
+    build: ./WMS  # Build from the specified Dockerfile
+
     env_file:
       - ../.env  # File containing necessary environment variables
     
@@ -33,30 +39,39 @@ services:
     depends_on:
       tomcat-ncwms:
         condition: service_healthy
+
     volumes:
-      - ./raster-backend/WMS/netCDF:/data/netCDF  # Copy data into the container
+      - ./WMS/netCDF:/data/netCDF  # Copy data into the container
 
   # Service for the raster API, serving png and asc files
   raster-api:
     container_name: raster-api
-    build: ./raster-backend/api  # Build image from the Dockerfile
+
+    build: ./raster-api  # Build image from the Dockerfile
+
     environment:
       DEBUG: 0
+
     volumes:
-      - ./raster-backend/api/data/asc:/data/asc  # Volume for ASC data
-      - ./raster-backend/api/data/png:/data/png  # Volume for PNG data
+      - ./raster-api/data/asc:/data/asc  # Volume for ASC data
+      - ./raster-api/data/png:/data/png  # Volume for PNG data
+
     ports:
       - 8100:8100  # Expose port 8100 for external access
 
   # Service for the timeseries database
   timeseries-database:
     container_name: timeseries-database
+
     user: postgres  # Specify the user as 'postgres'
+
     image: postgres:15-alpine  # Use the specified PostgreSQL image
+
     environment:
       DEBUG: 0  # Disable debug mode
       POSTGRES_PASSWORD: $POSTGRES_PASSWORD  # Set PostgreSQL password from system variable
       POSTGRES_DB: timeseries  # Name the database as 'timeseries'
+
     healthcheck: # Check PostgreSQL availability
       test: ["CMD-SHELL", "pg_isready"]  
       interval: 10s
@@ -65,25 +80,33 @@ services:
   # Service for filling data in the timeseries database
   timeseries-fill:
     container_name: timeseries-fill
-    build: ./timeseries-backend/fill-db  # Build from the specified Dockerfile
+
+    build: ./timeseries-api/fill-db  # Build from the specified Dockerfile
+
     environment:
       DEBUG: 0
       POSTGRES_PASSWORD: $POSTGRES_PASSWORD  # Set PostgreSQL password from system variable
+
     depends_on:
       timeseries-database:
         condition: service_healthy
+
     volumes:
-      - ./timeseries-backend/fill-db/data/txt:/data/txt  # Copy data into the container
+      - ./timeseries-api/fill-db/data/txt:/data/txt  # Copy data into the container
 
   # Service for the timeseries API
   timeseries-api:
     container_name: timeseries-api
-    build: ./timeseries-backend/api  # Build image from the Dockerfile within 'api' folder
+
+    build: ./timeseries-api/api  # Build image from the Dockerfile within 'api' folder
+
     environment:
       DEBUG: 0
       POSTGRES_PASSWORD: $POSTGRES_PASSWORD  # Set PostgreSQL password from system variable
+      
     depends_on:
       timeseries-fill:
         condition: service_completed_successfully
+
     ports:
       - 8000:8000  # Expose port 8000 for external access
