--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -9,7 +9,7 @@ services:
     volumes:
       - ./ncWMS/config.xml:/usr/local/tomcat/.ncWMS2/config.xml  # Configuration file for ncWMS
       - ./ncWMS/tomcat-users.xml:/usr/local/tomcat/conf/tomcat-users.xml  # User file for Tomcat
-      - ../api-data/netCDF:/data/netCDF  # Directory for netCDF data. CHANGE TO POINT TO CURRENT LOCATION
+      - ./api-data/netCDF:/data/netCDF  # Directory for netCDF data. CHANGE TO POINT TO CURRENT LOCATION
 
     ports:
       - 8080:8080  # Expose port 8080 for external access
@@ -33,7 +33,7 @@ services:
     build: ./ncWMS  # Build from the specified Dockerfile
 
     env_file:
-      - ../.env  # File containing necessary environment variables
+      - ./.env  # File containing necessary environment variables
     
     # Only start if tomcat-ncwms is running correctly
     depends_on:
@@ -41,7 +41,7 @@ services:
         condition: service_healthy
 
     volumes:
-      - ../api-data/netCDF:/data/netCDF  # Copy data into the container. CHANGE TO POINT TO CURRENT LOCATION
+      - ./api-data/netCDF:/data/netCDF  # Copy data into the container. CHANGE TO POINT TO CURRENT LOCATION
 
   # Service for the raster API, serving png and asc files
   raster-api:
@@ -53,8 +53,8 @@ services:
       DEBUG: 0
 
     volumes:
-      - ../api-data/asc:/data/asc  # Volume for ASC data. CHANGE TO POINT TO CURRENT LOCATION
-      - ../api-data/png:/data/png  # Volume for PNG data. CHANGE TO POINT TO CURRENT LOCATION
+      - ./api-data/asc:/data/asc  # Volume for ASC data. CHANGE TO POINT TO CURRENT LOCATION
+      - ./api-data/png:/data/png  # Volume for PNG data. CHANGE TO POINT TO CURRENT LOCATION
 
     ports:
       - 8100:8100  # Expose port 8100 for external access
@@ -92,7 +92,7 @@ services:
         condition: service_healthy
 
     volumes:
-      - ../api-data/txt:/data/txt  # Copy data into the container. CHANGE TO POINT TO CURRENT LOCATION
+      - ./api-data/txt:/data/txt  # Copy data into the container. CHANGE TO POINT TO CURRENT LOCATION
 
   # Service for the timeseries API
   timeseries-api:
