--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,8 @@
     "@testing-library/user-event": "^7.1.2",
     "bootstrap": "^5.3.2",
     "chart.js": "^4.4.0",
+    "chartjs-plugin-annotation": "^3.0.1",
+    "dotenv": "^16.3.1",
     "i18n-iso-countries": "^7.7.0",
     "lodash.range": "^3.2.0",
     "ol": "^7.3.0",
@@ -21,8 +23,7 @@
     "react-select": "^5.7.7",
     "sass": "^1.69.5",
     "source-map-loader": "^4.0.1",
-    "use-draggable-scroll": "^0.1.0",
-    "chartjs-plugin-annotation": "^3.0.1"
+    "use-draggable-scroll": "^0.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
