--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,6 +2,9 @@
   "name": "react-func-openlayers",
   "version": "0.2.0",
   "private": true,
+  "devDependencies": {
+    "react-scripts": "^5.0.1"
+  },
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
@@ -19,7 +22,6 @@
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.19.0",
-    "react-scripts": "^5.0.1",
     "react-select": "^5.7.7",
     "sass": "^1.69.5",
     "source-map-loader": "^4.0.1",
