--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,7 +3,8 @@
   "version": "0.2.0",
   "private": true,
   "devDependencies": {
-    "react-scripts": "^5.0.1"
+    "react-scripts": "^5.0.1",
+    "@babel/plugin-transform-private-property-in-object": "^7.23.4"
   },
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
