bezig om txt api te laten werken met n querystring ipv endpoints

--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -21,6 +21,10 @@ http {
         location / {
             proxy_pass http://map-website:80; # Proxy_pass to Node.js application internally on port 80
         }
+
+		location /api/txt {
+			proxy_pass http://localhost:8000
+		}
     }
 }
 	
