nginx.conf should now be correct

--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -23,7 +23,7 @@ http {
         }
 
 		location /api/txt/ {
-			proxy_pass http://127.30.0.5:8000/;
+			proxy_pass http://timeseries-api:8000;
 			proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection 'upgrade';
@@ -32,7 +32,7 @@ http {
 		}
 
 		location /ncWMS/ {
-			proxy_pass http://127.30.0.4:8080/ncWMS/;
+			proxy_pass http://tomcat-ncwms:8080/ncWMS/;
 			proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection 'upgrade';
@@ -41,7 +41,7 @@ http {
 		}
 
 		location /api/raster/ {
-			proxy_pass http://172.30.0.2:8100/;
+			proxy_pass http://raster-api:8100/;
 			proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection 'upgrade';
