--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -23,7 +23,7 @@ http {
         }
 
 		location /api/txt/ {
-			proxy_pass http://timeseries-api:8000;
+			proxy_pass http://timeseries-api:8000/;
 			proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection 'upgrade';
