--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,8 +3,8 @@
   "version": "0.2.0",
   "private": true,
   "devDependencies": {
-    "react-scripts": "^5.0.1",
-    "@babel/plugin-transform-private-property-in-object": "^7.23.4"
+    "@babel/plugin-transform-private-property-in-object": "^7.23.4",
+    "react-scripts": "^5.0.1"
   },
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
@@ -13,6 +13,7 @@
     "bootstrap": "^5.3.2",
     "chart.js": "^4.4.0",
     "chartjs-plugin-annotation": "^3.0.1",
+    "country-list-js": "^3.1.8",
     "dotenv": "^16.3.1",
     "i18n-iso-countries": "^7.7.0",
     "lodash.range": "^3.2.0",
