I think indeed docker-compose does everything

--- a/.env-template
+++ b/.env-template
@@ -4,4 +4,8 @@ export ncWMS_PASSWORD="[password]"
 # Timeseries Backend
 export POSTGRES_PASSWORD="[password]"
 
-# Website
+# data locations
+export NETCDF_PATH="[path]"
+export TXT_PATH="[path]"
+export ASC_PATH="[path]"
+export PNG_PATH="[path]"
