--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -14,16 +14,16 @@ http {
 		listen 443 ssl;
 		server_name hydeprod.geo.uu.nl; 
 
-        ssl_certificate /etc/nginx/certificaten/hyde-portal_geo_uu_nl.crt;
-        ssl_certificate_key /etc/nginx/certificaten/hyde-portal_geo_uu_nl.key;
-        ssl_trusted_certificate /etc/nginx/certificaten/CACert.crt;
+        ssl_certificate /etc/nginx/certificates/hyde-portal_geo_uu_nl.crt;
+        ssl_certificate_key /etc/nginx/certificates/hyde-portal_geo_uu_nl.key;
+        ssl_trusted_certificate /etc/nginx/certificates/CACert.crt;
 
         location / {
             proxy_pass http://map-website:80; # Proxy_pass to Node.js application internally on port 80
         }
 
 		location /api/txt/ {
-			proxy_pass http://timeseries-api:8000/;
+			proxy_pass http://timeseries-api:8000/api/txt/;
 			proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection 'upgrade';
@@ -41,7 +41,7 @@ http {
 		}
 
 		location /api/raster/ {
-			proxy_pass http://raster-api:8100/;
+			proxy_pass http://raster-api:8100/api/raster/;
 			proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection 'upgrade';
